--- a/slides/php-2019.mdx
+++ b/slides/php-2019.mdx
@@ -29,7 +29,7 @@ export const themes = [
 <Appear>
 <li>PHP is everywhere</li>
 <li>PHP is used by 79.0% of all the websites</li>
-<li>±25 million downloads a day</li>
+<li>±25 million packages download a day</li>
 </Appear>
 
 ---
@@ -59,9 +59,11 @@ export const themes = [
 ### Where we are:
 
 <Appear>
-<li>7.3 (currently)</li>
-<li>7.4 (november 2018)</li>
-<li>8.0 (november 2019)</li>
+<li>5.6 - 28 august 2014</li>
+<li>7.0 - 3 december 2015</li>
+<li style={{ color: '#7747fd' }}>7.3 - 6 december 2018</li>
+<li>7.4 - 21 november 2019</li>
+<li>8.0 - Q4 2020</li>
 </Appear>
 
 ---
@@ -134,72 +136,6 @@ array_map(fn(User $user) => $user->id, $users)
 $modifier = 5;
 
 array_map(fn($x) => $x * $modifier, $numbers);
-```
-
----
-
-# Typed properties
-
----
-
-### Typed properties
-
-```php
-class A
-{
-    public string $name;
-    
-    public Foo $foo;
-}
-```
-
----
-
-# Improved type variance
-
----
-
-### Improved type variance
-
-```php
-class ParentType {}
-class ChildType extends ParentType {}
-
-class A
-{
-    public function covariantReturnTypes(): ParentType
-    { /* … */ }
-}
-```
-
----
-
-### Improved type variance
-
-```php
-class B extends A
-{
-    public function covariantReturnTypes(): ChildType
-    { /* … */ }
-}
-```
-
----
-
-### Contravariant arguments
-
-```php
-class A
-{
-    public function contraVariantArguments(ChildType $type)
-    { /* … */ }
-}
-
-class B extends A
-{
-    public function contraVariantArguments(ParentType $type)
-    { /* … */ }
-}
 ```
 
 ---
@@ -319,6 +255,72 @@ $util->setLogger(new class {
     public function log($msg)
     { /* … */ }
 });
+```
+
+---
+
+# Typed properties
+
+---
+
+### Typed properties
+
+```php
+class A
+{
+    public string $name;
+    
+    public Foo $foo;
+}
+```
+
+---
+
+# Improved type variance
+
+---
+
+### Improved type variance
+
+```php
+class ParentType {}
+class ChildType extends ParentType {}
+
+class A
+{
+    public function covariantReturnTypes(): ParentType
+    { /* … */ }
+}
+```
+
+---
+
+### Improved type variance
+
+```php
+class B extends A
+{
+    public function covariantReturnTypes(): ChildType
+    { /* … */ }
+}
+```
+
+---
+
+### Contravariant arguments
+
+```php
+class A
+{
+    public function contraVariantArguments(ChildType $type)
+    { /* … */ }
+}
+
+class B extends A
+{
+    public function contraVariantArguments(ParentType $type)
+    { /* … */ }
+}
 ```
 
 ---
